# vircov

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  codecov.yaml
.github/workflows/: release.yaml  rust-ci.yaml
paper/: plot.R
src/: align.rs  alignment.rs  annotation.rs  cli.rs  consensus.rs  covplot.rs  error.rs  haplotype.rs  lib.rs  main.rs  paf.rs  subtype.rs  terminal.rs  utils.rs  vircov.rs
tests/: app.rs
tests/cases/: test_bam_ok.fasta  test_bam_zero_ok.fasta  test_ok.bam  test_ok.paf  test_ok.sam  test_paf_ok.fasta  test_record_size_fail.paf
