[package]
rust-version = "1.76"
name = "vircov"
version = "0.7.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Vircov: genome coverage tools for metagenomic diagnostics of viral pathogens"
documentation = "https://github.com/esteinig/vircov"
homepage = "https://github.com/esteinig/vircov"
repository = "https://github.com/esteinig/vircov"
readme = "README.md"
keywords = ["meta-gp", "viral", "metagenomics", "coverage", "diagnostics"]
categories = ["science"]
license = "MIT"
edition = "2021"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
tabled = "0.5.0"
thiserror = "1.0"
crossterm = "0.23.0"
itertools = "0.10.3"
rust-htslib = "0.38"
rust-lapper = "1.0.0"
ordered-float = "3.0.0"
noodles = { version = "0.20.0", features = ["fasta"] }
anstyle = "1.0.6"
log = "0.4.21"
env_logger = "0.10.0"
niffler = "2.5.0"
serde = "1.0.197"
tar = "0.4.40"
tempfile = "3.10.1"

[dev-dependencies]
assert_cmd = "2.0.1"
float_eq = "0.6.1"
predicates = "1"

[[bin]]
name = "vircov"
path = "src/main.rs"
